// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cellSetsReducer Adds cells to scratchpad on creation 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "key": "key2",
      },
    ],
    "key": "scratchpad",
  },
]
`;

exports[`cellSetsReducer Adds cells to scratchpad on creation 2`] = `
Object {
  "key2": Object {
    "cellIds": Set {
      1,
      2,
      3,
    },
    "color": "#ff00ff",
    "key": "key2",
    "name": "My Key",
    "parentNodeKey": "scratchpad",
    "type": "cellSets",
  },
}
`;

exports[`cellSetsReducer Adds hidden cell sets to set 1`] = `
Set {
  "new",
}
`;

exports[`cellSetsReducer Handles rehiding of previously hidden cell sets 1`] = `
Set {
  "a",
}
`;

exports[`cellSetsReducer Handles unhiding of a not hidden cell set 1`] = `
Set {
  "a",
}
`;

exports[`cellSetsReducer Handles unhiding of previously hidden cell sets 1`] = `Set {}`;

exports[`cellSetsReducer Removes child correctly 1`] = `
Array [
  Object {
    "children": Array [],
    "key": "1",
  },
  Object {
    "children": Array [],
    "key": "2",
  },
]
`;

exports[`cellSetsReducer Selected cells are maintained 1`] = `
Array [
  "a",
  "b",
  "c",
]
`;

exports[`cellSetsReducer Selected cells are maintained 2`] = `
Array [
  1,
  2,
  "c",
  3,
]
`;

exports[`cellSetsReducer Sets up store properly for loaded cell sets. 1`] = `
Object {
  "1": Object {
    "cellIds": Set {},
    "color": undefined,
    "name": "parent 1",
    "rootNode": true,
    "type": undefined,
  },
  "1a": Object {
    "cellIds": Set {},
    "color": "#00FF00",
    "name": "first child",
    "parentNodeKey": "1",
    "rootNode": undefined,
    "type": undefined,
  },
  "2": Object {
    "cellIds": Set {},
    "color": undefined,
    "name": "parent 2",
    "rootNode": true,
    "type": undefined,
  },
}
`;

exports[`cellSetsReducer Updates cell set properties 1`] = `
Object {
  "cellIds": undefined,
  "color": "#ffffff",
  "name": "favorite child",
  "rootNode": undefined,
}
`;

exports[`cellSetsReducer reorders correctly 1`] = `
Object {
  "error": false,
  "hidden": Set {},
  "hierarchy": Array [
    Object {
      "children": Array [
        Object {
          "key": "1b",
        },
        Object {
          "key": "1a",
        },
      ],
      "key": "1",
    },
    Object {
      "children": Array [],
      "key": "2",
    },
  ],
  "initialLoadPending": true,
  "loading": false,
  "properties": Object {
    "1": Object {
      "cellIds": undefined,
      "color": undefined,
      "name": "parent 1",
      "rootNode": true,
    },
    "1a": Object {
      "cellIds": Array [],
      "color": "#00FF00",
      "name": "first child",
      "rootNode": false,
    },
    "1b": Object {
      "cellIds": Array [],
      "color": "#00FFFF",
      "name": "second child",
      "rootNode": false,
    },
    "2": Object {
      "cellIds": undefined,
      "color": undefined,
      "name": "parent 2",
      "rootNode": true,
    },
  },
  "selected": Array [],
  "updatingClustering": false,
}
`;
